[tool.poetry]
name = "nonebot-adapter-qq"
version = "1.3.0"
description = "QQ adapter for nonebot2"
authors = ["yanyongyu <yyy@nonebot.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nonebot/adapter-qq"
repository = "https://github.com/nonebot/adapter-qq"
documentation = "https://github.com/nonebot/adapter-qq#readme"
keywords = ["bot", "qq", "qqbot", "qqguild"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
packages = [{ include = "nonebot" }]

[tool.poetry.dependencies]
python = "^3.8"
yarl = "^1.9.0"
pydantic = "^1.9.0"
nonebot2 = "^2.1.0"
typing-extensions = ">=4.4.0, <5.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
isort = "^5.10.1"
black = "^23.1.0"
nonemoji = "^0.1.3"
pre-commit = "^3.3.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "Q"]
ignore = ["E402", "F403", "F405", "C901", "UP037"]

line-length = 88
target-version = "py38"

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
