[project]
name = "nonebot-adapter-qq"
version = "1.6.5"
description = "QQ adapter for nonebot2"
authors = [{ name = "yanyongyu", email = "yyy@nonebot.dev" }]
requires-python = ">=3.9, <4"
readme = "README.md"
license = "MIT"
keywords = ["bot", "qq", "qqbot", "qqguild"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "yarl >=1.9.0, <2",
  "nonebot2 >=2.2.1, <3",
  "cryptography >=43.0.3, <47.0.0",
  "typing-extensions >=4.4.0, <5.0.0",
  "pydantic >=1.10.0, <3.0.0, !=2.5.0, !=2.5.1",
]

[project.urls]
Homepage = "https://github.com/nonebot/adapter-qq"
Repository = "https://github.com/nonebot/adapter-qq"
Documentation = "https://github.com/nonebot/adapter-qq#readme"

[dependency-groups]
dev = [
  "ruff >=0.14.0, <0.15.0",
  "nonemoji >=0.1.3, <0.2.0",
  "pre-commit >=4.0.0, <5.0.0",
]

[tool.uv.build-backend]
module-root = ""
module-name = "nonebot.adapters.qq"

[build-system]
requires = ["uv_build >=0.9.0, <0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "I",     # isort
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }

typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
